# task_master

./: .gitignore  .gitlab-ci.yml  .gitleaksignore  .mise.toml  CLAUDE.md  DEPLOYMENT_GUIDE.md  Justfile  Makefile  PRODUCTION_FIX.md  README.md  backup.sh  deploy.sh  env.production.example  readme.md  setup-vps.sh
backend/: .flake8  alembic.ini  pyproject.toml  test_gemini_debug.py  test_gemini_full.py  test_gemini_manual.py  test_gemini_simple.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_task_table.py  004_add_task_metadata.py  005_three_table_schema.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/lib/: __init__.py  database.py  gemini_client.py  metadata_parsers.py  ollama_client.py
backend/src/models/: __init__.py  enums.py  task.py  task_metadata.py  todos.py  workbench.py
backend/src/services/: enrichment_service.py  metadata_extraction.py  task_queue.py  task_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/contract/: test_gemini_client.py  test_metadata_api.py  test_tasks_api.py  test_three_table_api.py
backend/tests/integration/: test_async_tasks.py  test_deadline_validation.py  test_enrichment_workflow.py  test_enrichment_workflow_gemini.py  test_metadata_enrichment.py  test_migration.py  test_ollama_gemini_migration.py  test_task_creation.py  test_task_retry.py  test_todo_queries.py  test_workbench_queries.py
backend/tests/unit/: test_date_parsing.py  test_enrichment_service.py  test_gemini_client.py  test_metadata_extraction.py  test_metadata_parsers.py  (+2 more)
(+206 files in other folders)
